[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logveil"
version = "0.1.0"
description = "Redact secrets and personal data from logs locally"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "piyuq11" }]
keywords = ["logs", "redaction", "privacy", "security", "cli"]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]

[project.scripts]
logveil = "logveil.cli:main"

[project.urls]
Homepage = "https://github.com/piyuq11/logveil"
Issues = "https://github.com/piyuq11/logveil/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/logveil"]

[tool.pytest.ini_options]
pythonpath = ["src"]
